# Demo

./: .gitignore  README.md
AndroidCrazyDemo/: README.md  settings.gradle
AndroidCrazyDemo/001-uibycode/: build.gradle
AndroidCrazyDemo/002-imagebrowser/: build.gradle
AndroidCrazyDemo/003-ballfollowyourfinger/: build.gradle
AndroidCrazyDemo/004-richtablelayout/: build.gradle
AndroidCrazyDemo/005-neonlights/: build.gradle
AndroidCrazyDemo/006-plumlayout/: build.gradle
AndroidCrazyDemo/007-calculator/: build.gradle
AndroidCrazyDemo/009-differentformattext/: build.gradle
AndroidCrazyDemo/010-textviewwithborderandbackground/: build.gradle
AndroidCrazyDemo/011-userfriendlyinputui/: build.gradle
AndroidCrazyDemo/012-allkindsofbutton/: build.gradle
AndroidCrazyDemo/013-radiobuttonandcheckbox/: build.gradle
AndroidDemo/: README.md  build.gradle  gradle.properties  settings.gradle
BashDemo/: README.md  fun.sh  subtest.sh  test.py  test.sh
CMinGWDemo/: CMakeLists.txt  main.c
CPPMinGWDemo/: CMakeLists.txt  demo_thread.cpp  demo_thread.h  main.cpp
CPPMinGWDemo/Algorithm/: Main.cpp  OJ.cpp  Sort.cpp
CPPMinGWDemo/B/: b.cpp  b.h
CPPMinGWDemo/cGrammar/: main.c
CPPMinGWDemo/cppGrammar/: DemoOperator.cpp  DemoTemplate.cpp  DemoTemplate.h  StringDemo.cpp  StringDemo.h  demo_ptr_ref.cpp  main.cpp
CUbuntuDemo/: CMakeLists.txt  README.txt  main.c
CUbuntuDemo/get_sys_info/: get_sys_info.c  get_sys_info.h
CUbuntuDemo/ubus_demo/: ubus_demo.c  ubus_demo.h
javaDemo/: Dog.properties  mysql.properties  pom.xml  test1.txt  test2.txt
(+1351 files in other folders)
